--- a/public/css/veflix.css
+++ b/public/css/veflix.css
@@ -1,10 +1,89 @@
 /*---------------------body------------------------------*/
 body{
-  background-color:  #333232;
+  background-color:  #141414;
+  color:white;
+}
+/*--------------------tabla-------------------------------*/
+
+table td{
+  color: #141414;
 }
 
+.responsive-card-table {
+  border-collapse: collapse;
+}
 
+.responsive-card-table.unstriped tbody {
+  background-color: transparent;
+}
+
+.responsive-card-table th {
+  background-color: #e6e6e6;
+}
+
+.responsive-card-table tr,
+.responsive-card-table th,
+.responsive-card-table td {
+  border: 1px solid #0a0a0a;
+}
+
+@media screen and (max-width: 640px) {
+  .responsive-card-table {
+    
+  }
+  .responsive-card-table thead tr {
+    position: absolute;
+    top: -9999em;
+    left: -9999em;
+  }
+  .responsive-card-table tr {
+    border: 1px solid #0a0a0a;
+    display: block;
+  }
+  .responsive-card-table tr + tr {
+    margin-top: 1.5rem;
+  }
+  .responsive-card-table td {
+    border: none;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center;
+    border-bottom: 1px solid #0a0a0a;
+    padding-left: 50%;
+    position: relative;
+  }
+  .responsive-card-table td:before {
+    content: attr(data-label);
+    display: inline-block;
+    font-weight: bold;
+    line-height: 1.5;
+    margin-left: -100%;
+    width: 100%;
+    position: relative;
+    z-index: 1;
+  }
+  .responsive-card-table td:after {
+    content: '';
+    position: absolute;
+    background: #e6e6e6;
+    width: 45%;
+    height: 95%;
+    left: 1px;
+    top: 1px;
+    z-index: 0;
+  }
+}
 /* ---------------------Formulario login-----------------*/
+#form{
+  padding-left: 58%;
+}
+
 .translucent-form-overlay {
   max-width: 500px;
   width: 100%;
@@ -41,9 +120,22 @@ body{
 /*--------------------------HEADER------------------------------*/
 
 #header-container h1{
- color:#fe0505;
+ color:#e50914;
+ font-size: 3rem;
 }
 
 #header-container a{
-  color: white;
+  color: #e50914;
+}
+#header-container a:hover{
+  color: #fff;
+}
+/*----------boton-------------------------------------------*/
+
+.button{
+  padding: .5rem 1rem;
+  cursor: pointer; 
+}
+.button:hover{
+  opacity: .75;
 }
